Index cambios nuevos

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 <body>
     <style>
     body{
-        background: red;
+        background: blue;
     }
     </style>
 
     <header>
         <h1>Encabezado Principal</h1>
+        <style>
+            body{
+                background: red;
+            }
     </header>
 
 
